--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "ukraine.gdg.electromicalqueue"
+        applicationId "ukraine.gdg.electronicalqueue"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -29,18 +29,11 @@ dependencies {
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
     compile "com.android.support:recyclerview-v7:$supportVersion"
-
-    // reactive stuff
-
-    // networking
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-
-    // injectors
-
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    // etc
+    compile 'com.squareup.okhttp:okhttp:2.7.2'
+
 
 
 }
