--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LoginActivity"
-            android:label="Sign In">
+        <activity android:name=".activity.SplashActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +20,8 @@
             android:name=".activity.MainActivity" />
         <activity
             android:name=".activity.BaseActivity" />
+        <activity
+            android:name=".activity.LoginActivity" />
     </application>
 
 </manifest>
